transit-vpc/security_group.tf
resource "aws_security_group" "vpn" {
  name = "vpn-sg"
  description = "Allow SSH, BGP, HTTP, HTTPS, TCP/1194, UDP/1194"
  vpc_id = "${aws_vpc.transit.id}"
  ingress {
    from_port = 22
    to_port = 22
    protocol = "TCP"
    cidr_blocks = [ "${var.SSH_CIDR_BLOCK}" ]
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "TCP"
    cidr_blocks = [ "${var.HTTPS_CIDR_BLOCK}" ]
  }
  ingress {
    from_port = 500
    to_port = 500
    protocol = "UDP"
    cidr_blocks = [ "${var.VPN_CIDR_BLOCK}" ]
  }
  ingress {
    from_port = 1194
    to_port = 1194
    protocol = "TCP"
    cidr_blocks = [ "${var.VPN_CIDR_BLOCK}" ]
  }
  ingress {
    from_port = 1194
    to_port = 1194
    protocol = "UDP"
    cidr_blocks = [ "${var.VPN_CIDR_BLOCK}" ]
  }
  ingress {
    from_port = 4500
    to_port = 4500
    protocol = "UDP"
    cidr_blocks = [ "${var.VPN_CIDR_BLOCK}" ]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags {
    Name = "vpn-sg"
    Organization = "${var.ORG}"
  }
}
